Bug 330885 - Misplaced editor in table view's combo box for right alignment
Summary: Misplaced editor in table view's combo box for right alignment
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Tables (other bugs)
Version First Reported In: 2.8 beta2
Platform: unspecified All
: NOR normal
Target Milestone: 2.8
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-07 12:55 UTC by Jarosław Staniek
Modified: 2014-03-02 22:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Misplaced combo box editor in table view (24.33 KB, image/png)
2014-02-07 12:56 UTC, Jarosław Staniek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2014-02-07 12:55:25 UTC
Editor in table view's combo box is misplaced when right column alignment is set. Right alignment is used for numbers.

Reproducible: Always

Steps to Reproduce:
Click the drop -down button for a lookup column that has visible column set to one of type number (integer or floating point)


See the attachment.

Actual Results:  
Misplaced editor appears

Expected Results:  
The editor should be properly aligned.

Margins/padding could be improved too.
Comment 1 Jarosław Staniek 2014-02-07 12:56:38 UTC
Created attachment 85032 [details]
Misplaced combo box editor in table view
Comment 2 Jarosław Staniek 2014-02-20 09:58:21 UTC
Git commit b1b274e7fd79fe13f7cb3cb6bbc9acde023fe904 by Jaroslaw Staniek.
Committed on 07/02/2014 at 13:11.
Pushed by staniek into branch 'calligra/2.8'.

Fix misplaced combobox editor and unnecessary scrollbars

- Misplaced editor in table view's combo box for right alignment
- Scrollbars sometimes appear in combo box popup even when they are not needed
Related: bug 330886
REVIEW:115537

M  +14   -8    kexi/widget/tableview/kexicomboboxtableedit.cpp
M  +23   -21   kexi/widget/tableview/kexiinputtableedit.cpp
M  +1    -0    kexi/widget/tableview/kexiinputtableedit.h
M  +5    -4    kexi/widget/tableview/kexitableedit.cpp
M  +4    -4    kexi/widget/tableview/kexitableview.cpp

http://commits.kde.org/calligra/b1b274e7fd79fe13f7cb3cb6bbc9acde023fe904
Comment 3 Jarosław Staniek 2014-02-20 10:08:47 UTC
Git commit 79193099af0b1c713574a7a4bf8e88ec992822db by Jaroslaw Staniek.
Committed on 07/02/2014 at 13:11.
Pushed by staniek into branch 'master'.

Fix misplaced combobox editor and unnecessary scrollbars

- Misplaced editor in table view's combo box for right alignment
- Scrollbars sometimes appear in combo box popup even when they are not needed
Related: bug 330886

M  +14   -8    kexi/widget/tableview/kexicomboboxtableedit.cpp
M  +23   -21   kexi/widget/tableview/kexiinputtableedit.cpp
M  +1    -0    kexi/widget/tableview/kexiinputtableedit.h
M  +5    -4    kexi/widget/tableview/kexitableedit.cpp
M  +4    -4    kexi/widget/tableview/kexitableview.cpp

http://commits.kde.org/calligra/79193099af0b1c713574a7a4bf8e88ec992822db