Fix misplaced combobox editor and unnecessary scrollbars

- Misplaced editor in table view's combo box for right alignment
- Scrollbars sometimes appear in combo box popup even when they are not needed

BUG:330885
BUG:330886